--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -29,8 +29,9 @@
   gap: 20px;
   margin-top: 20px;
   display: flex;
-flex-direction: column;
+  flex-direction: column;
 }
+
 /* .card {
   grid-column: 1/2;
   grid-row: 1/2;
@@ -51,6 +52,232 @@ flex-direction: column;
   display: flex;
 }
 
-.card + .card {
+.card+.card {
   margin-left: 20px;
 }
+
+@media (max-width: 1000px) {
+  .card {
+    width: 46.9vw;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .card_paragraph {
+    font-size: 26px;
+    font-weight: 500;
+  }
+
+  .card_text {
+    font-size: 28px;
+    font-weight: 700;
+  }
+
+  .card_two {
+    margin-top: 70px;
+  }
+
+  .card_wrapper {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card_wrapper_inner {
+    display: flex;
+  }
+
+  .card+.card {
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 650px) {
+  .card {
+    width: 46.9vw;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .card_paragraph {
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .card_text {
+    font-size: 22px;
+    font-weight: 700;
+  }
+
+  .card_two {
+    margin-top: 70px;
+  }
+
+  .card_wrapper {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card_wrapper_inner {
+    display: flex;
+  }
+
+  .card+.card {
+    margin-left: 20px;
+  }
+
+  .card_two .card_img {
+    width: 60px !important;
+    height: 60px !important;
+  }
+}
+@media (max-width: 520px) {
+  .card {
+    width: 43.9vw;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .card_paragraph {
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .card_text {
+    font-size: 22px;
+    font-weight: 700;
+  }
+
+  .card_two {
+    margin-top: 70px;
+  }
+
+  .card_wrapper {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+
+  .card_wrapper_inner {
+    display: flex;
+  }
+
+  .card+.card {
+    margin-left: 20px;
+  }
+
+  .card_two .card_img {
+    width: 60px !important;
+    height: 60px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    width: 43.9vw;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card_paragraph {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .card_text {
+    font-size: 22px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .card_two {
+    margin-top: 10px;
+  }
+
+  .card_wrapper {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+
+  .card_wrapper_inner {
+    display: flex;
+  }
+
+  .card+.card {
+    margin-left: 20px;
+  }
+
+  .card_two .card_img {
+    width: 80px !important;
+    height: 80px !important;
+  }
+
+  .card_img {
+    margin-left: 27%;
+    margin-right: auto;
+
+  }
+}
+@media (max-width: 400px) {
+  .card {
+    width: 90vw;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card_paragraph {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .card_text {
+    font-size: 22px;
+    font-weight: 700;
+    text-align: center;
+  }
+
+  .card_two {
+    margin-top: 10px;
+  }
+
+  .card_wrapper {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+
+  .card_wrapper_inner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card+.card {
+    margin-left: 0px;
+    margin-top: 20px;
+  }
+
+  .card_two .card_img {
+    width: 80px !important;
+    height: 80px !important;
+  }
+
+  .card_img {
+    margin-left: 40%;
+    margin-right: auto;
+
+  }
+}
+
+
