--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -46,3 +46,44 @@
     margin-left: 50px;
   }
 }
+@media (max-width: 520px) {
+  .header_paragraph {
+    font-size: 30px;
+    color: #0061F7;
+    font-weight: 700;
+    opacity: 0.9;
+    margin-left: 50px;
+  }
+  .header_date {
+    display: none;
+    color: #0061F7;
+    font-size: 20px;
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 450px) {
+  .header {
+    width: 100%;
+    background-color: #fff;
+    padding: 20px;
+  }
+  .header_paragraph {
+    font-size: 24px;
+    color: #0061F7;
+    font-weight: 700;
+    opacity: 0.9;
+    margin-left: 30px;
+  }
+  .header_date {
+    display: none;
+    color: #0061F7;
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .header_mode {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+  }
+}
