--- a/src/components/StudentsList/studentsListt.css
+++ b/src/components/StudentsList/studentsListt.css
@@ -43,6 +43,7 @@ tr {
 .student_list_header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-top: 50px;
   margin-bottom: 20px;
 }
@@ -123,11 +124,13 @@ tr {
 @media (max-width: 850px) {
   .student_list {
     margin-bottom: 70px;
-    overflow: scroll !important;
+    overflow-x: scroll !important;
   }
   
   .student_list_box {
+    width: 850px !important;
     padding-bottom: 60px;
+    overflow: auto;
   }
   
   table {
@@ -168,6 +171,118 @@ tr {
   
   .student_list_input {
     padding: 14px 16px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 14px;
+  }
+}
+@media (max-width: 550px) {
+  .student_list {
+    margin-bottom: 70px;
+    overflow-x: scroll !important;
+  }
+  
+  .student_list_box {
+    width: 850px !important;
+    padding-bottom: 60px;
+    overflow: auto;
+  }
+  
+  table {
+    width: 100%;
+  }
+  
+  thead tr th {
+    padding: 10px;
+  }
+  
+  tbody tr {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  tr {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  
+  .tbody {
+    padding: 10px !important;
+  }
+  
+  .student_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+  
+  .student_list_paragraph {
+    font-size: 26px;
+  }
+  
+  .student_list_input {
+    padding: 14px 10px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 450px) {
+  .student_list {
+    margin-bottom: 70px;
+    overflow-x: scroll !important;
+  }
+  
+  .student_list_box {
+    width: 850px !important;
+    padding-bottom: 60px;
+    overflow: auto;
+  }
+  
+  table {
+    width: 100%;
+  }
+  
+  thead tr th {
+    padding: 10px;
+  }
+  
+  tbody tr {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  tr {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  
+  .tbody {
+    padding: 10px !important;
+  }
+  
+  .student_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 20px;
+  }
+  
+  .student_list_paragraph {
+    font-size: 22px;
+  }
+  
+  .student_list_input {
+    width: 150px;
+    padding: 14px 10px;
     height: 26px;
     font-weight: 600;
     font-size: 14px;
