--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -205,3 +205,91 @@ label #cancel {
     margin-top: 10px;
   }
 }
+
+@media (max-width: 550px) {
+  .hamburger {
+    position: absolute;
+    top: 20px;
+    display: block;
+    color: #2F49D1;
+  }
+
+  .actives {
+    background-color: #01265F;
+    padding: 5px;
+    width: 100.5%;
+    border-right: 4px solid #fff;
+    display: flex;
+    align-items: center;
+  }
+
+  label #btn {
+    display: inline-block;
+    color: #0061F7;
+    opacity: 0.9;
+    font-size: 30px;
+    margin-top: 8px;
+    margin-left: -10px;
+  }
+
+  .siadebar {
+    position: fixed;
+    top: 0;
+    right: -90%;
+    width: 50%;
+    height: 100vh;
+    display: block;
+    line-height: 40px;
+    background-color:#2F49D1;
+    z-index: 100;
+    transition: 0.5s;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .active {
+    position: fixed;
+    right: -100%;
+  }
+
+  #check:checked~.siadebar {
+    right: 0px;
+  }
+
+  #check:checked~label #cancel {
+    display: block;
+    z-index: 101;
+    color: #2F49D1;
+    right: 0;
+    font-size: 30px;
+    margin-top: 10px;
+    margin-top: 8px;
+    margin-left: -10px;
+  }
+
+  #check:checked~label #btn {
+    display: none;
+    font-size: 10px;
+    margin-top: 8px;
+    margin-left: -10px;
+  }
+  .sidebar_item {
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+
+  .sidebar_link {
+    display: flex;
+    align-items: center;
+  }
+
+  .sidebar_link_text {
+    font-size: 16px;
+    margin-left: 20px;
+  }
+  .sidebar_link_img {
+    margin-top: 10px;
+  }
+}
