--- a/src/pages/Group/group.css
+++ b/src/pages/Group/group.css
@@ -16,3 +16,20 @@
   display: flex;
   flex-direction: column;
 }
+
+@media (max-width: 1000px) {
+.group_inner {
+  display: flex;
+}
+
+.group_right_box {
+  width: 100vw;
+  padding-left: 0px;
+  padding-top: 0px;
+}
+.group_right_box_inner {
+  padding-left: 0px;
+  display: flex;
+  flex-direction: column;
+}
+}
