--- a/src/pages/Payment/payment.css
+++ b/src/pages/Payment/payment.css
@@ -11,8 +11,27 @@
   padding-left: 0px;
   padding-top: 0px;
 }
+
 .pay_right_box_inner {
   padding-left: 20px;
   display: flex;
   flex-direction: column;
+}
+
+@media (max-width: 1000px) {
+  .pay_inner {
+    display: flex;
+  }
+
+  .pay_right_box {
+    width: 100vw;
+    padding-left: 0px;
+    padding-top: 0px;
+  }
+
+  .pay_right_box_inner {
+    padding-left: 0px;
+    display: flex;
+    flex-direction: column;
+  }
 }
