--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -11,6 +11,8 @@
   border-right: 4px solid #fff;
   display: flex;
   align-items: center;
+  transform: scale(1.2);
+  box-shadow: 2px 6px 22px 0px rgba(0, 0, 0, 0.36);
 }
 
 #check {
