--- a/src/pages/Appeal/apeal.css
+++ b/src/pages/Appeal/apeal.css
@@ -17,3 +17,21 @@
   display: flex;
   flex-direction: column;
 }
+
+@media (max-width: 1000px) {
+.apeal_inner {
+  display: flex;
+}
+
+.apeal_right_box {
+  width: 100vw;
+  padding-left: 0px;
+  padding-top: 0px;
+}
+.apeal_right_box_inner {
+  width: 100%;
+  padding-left: 0px;
+  display: flex;
+  flex-direction: column;
+}
+}
