--- a/src/components/ApealTwoList/apealtwolist.css
+++ b/src/components/ApealTwoList/apealtwolist.css
@@ -69,3 +69,192 @@ tr {
 
 
 /* .table_img {} */
+
+@media (max-width: 850px) {
+  .apeal_list {
+    margin-bottom: 70px;
+    overflow-x: scroll !important;
+  }
+
+  .apeal_list_box {
+    width: 810px;
+    padding-bottom: 100px;
+    overflow: auto;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  thead tr th {
+    padding: 10px;
+  }
+
+  tbody tr {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  tr {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .tbody {
+    padding: 10px !important;
+  }
+
+  .apeal_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    align-items: center;
+  }
+
+  .apeal_list_paragraph {
+    font-size: 30px;
+    margin-right: 30px;
+  }
+
+  .apeal_list_input {
+    padding: 18px 20px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+
+  .long_text {
+    width: 50%;
+  }
+}
+
+@media (max-width: 520px) {
+  .apeal_list {
+    margin-bottom: 70px;
+    overflow-x: scroll !important;
+    padding-left: 20px;
+  }
+
+  .apeal_list_box {
+    width: 810px;
+    padding-bottom: 100px;
+    overflow: auto;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  thead tr th {
+    padding: 10px;
+  }
+
+  tbody tr {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  tr {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .tbody {
+    padding: 10px !important;
+  }
+
+  .apeal_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    align-items: center;
+  }
+
+  .apeal_list_paragraph {
+    font-size: 26px;
+    margin-right: 30px;
+  }
+
+  .apeal_list_input {
+    width: 210px;
+    padding: 16px 20px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 14px;
+  }
+
+  .long_text {
+    width: 50%;
+  }
+}
+
+@media (max-width:470px) {
+  .apeal_list {
+    margin-bottom: 70px;
+    overflow-x: scroll !important;
+    padding-left: 20px;
+  }
+
+  .apeal_list_box {
+    width: 810px;
+    padding-bottom: 100px;
+    overflow: auto;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  thead tr th {
+    padding: 10px;
+  }
+
+  tbody tr {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  tr {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .tbody {
+    padding: 10px !important;
+  }
+
+  .apeal_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .apeal_list_paragraph {
+    font-size: 26px;
+    margin-right: 0px;
+    margin-bottom: 20px;
+  }
+
+  .apeal_list_input {
+    width: 210px;
+    padding: 16px 20px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 14px;
+  }
+
+  .long_text {
+    width: 50%;
+  }
+}
