--- a/src/components/SawAttendance/sawattendance.css
+++ b/src/components/SawAttendance/sawattendance.css
@@ -46,8 +46,8 @@
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
- border-top-left-radius: 8px;
- border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .attendance_list_card_top {
@@ -70,9 +70,10 @@
 .attendance_list_card_top_item+.attendance_list_card_top_item {
   margin-top: 7px;
 }
- .attendance_list_card_top_p {
+
+.attendance_list_card_top_p {
   margin-right: 10px;
- } 
+}
 
 /* .attendance_list_card_top_text {}
 
@@ -95,4 +96,445 @@
 
 .attendance_list_card_bottom_text {
   font-size: 14px;
+}
+
+@media (max-width: 1250px) {
+  .attendance_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+  }
+
+  .attendance_list_header_paragraph {
+    font-size: 30px;
+    margin-right: 20px;
+  }
+
+  .attendance_list_input {
+    padding: 18px 20px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+
+  .attendance_list_ul {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  .attendance_list_item {
+    width: 42%;
+    border-radius: 8px;
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+
+  .attendance_list_card_paragraph {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .attendance_list_card_top {
+    display: flex;
+    align-items: center;
+  }
+
+  .attendance_list_card_span {
+    padding-right: 20px;
+  }
+
+
+  .attendance_list_card_top_item {
+    display: flex;
+  }
+
+  .attendance_list_card_top_item+.attendance_list_card_top_item {
+    margin-top: 7px;
+  }
+
+  .attendance_list_card_top_p {
+    margin-right: 10px;
+  }
+
+  .attendance_list_card_bottom_item {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .attendance_list_card_bottom_p {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .attendance_list_card_bottom_text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 850px) {
+  .attendance_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+  }
+
+  .attendance_list_header_paragraph {
+    font-size: 26px;
+    margin-right: 30px;
+  }
+
+  .attendance_list_input {
+    width: 230px;
+    padding: 14px 20px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+
+  .attendance_list_ul {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  .attendance_list_item {
+    width: 42%;
+    border-radius: 8px;
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+
+  .attendance_list_card_paragraph {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .attendance_list_card_top {
+    display: flex;
+    align-items: center;
+  }
+
+  .attendance_list_card_span {
+    padding-right: 20px;
+  }
+
+
+  .attendance_list_card_top_item {
+    display: flex;
+  }
+
+  .attendance_list_card_top_item+.attendance_list_card_top_item {
+    margin-top: 7px;
+  }
+
+  .attendance_list_card_top_p {
+    margin-right: 10px;
+  }
+
+  .attendance_list_card_bottom_item {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .attendance_list_card_bottom_p {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .attendance_list_card_bottom_text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 714px) {
+  .attendance_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+  }
+
+  .attendance_list_header_paragraph {
+    font-size: 26px;
+    margin-right: 30px;
+  }
+
+  .attendance_list_input {
+    width: 230px;
+    padding: 14px 20px;
+    height: 26px;
+    font-weight: 600;
+    font-size: 16px;
+  }
+
+  .attendance_list_ul {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  .attendance_list_item {
+    width: 90%;
+    border-radius: 8px;
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+
+  .attendance_list_card_paragraph {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .attendance_list_card_top {
+    display: flex;
+    align-items: center;
+  }
+
+  .attendance_list_card_span {
+    padding-right: 20px;
+  }
+
+
+  .attendance_list_card_top_item {
+    display: flex;
+  }
+
+  .attendance_list_card_top_item+.attendance_list_card_top_item {
+    margin-top: 7px;
+  }
+
+  .attendance_list_card_top_p {
+    margin-right: 10px;
+  }
+
+  .attendance_list_card_bottom_item {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .attendance_list_card_bottom_p {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .attendance_list_card_bottom_text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 520px) {
+  .attendance_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: column;
+  }
+
+  .attendance_list_header_paragraph {
+    font-size: 26px;
+    margin-right: 0px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .attendance_list_input {
+    width: 250px;
+    padding: 14px 10px;
+    height: 26px;
+    font-weight: 500;
+    font-size: 14px;
+  }
+
+  .attendance_list_ul {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  .attendance_list_item {
+    width: 90%;
+    border-radius: 8px;
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+
+  .attendance_list_card_paragraph {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .attendance_list_card_top {
+    display: flex;
+    align-items: center;
+  }
+
+  .attendance_list_card_span {
+    padding-right: 20px;
+  }
+
+
+  .attendance_list_card_top_item {
+    display: flex;
+  }
+
+  .attendance_list_card_top_item+.attendance_list_card_top_item {
+    margin-top: 7px;
+  }
+
+  .attendance_list_card_top_p {
+    margin-right: 10px;
+  }
+
+  .attendance_list_card_bottom_item {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .attendance_list_card_bottom_p {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .attendance_list_card_bottom_text {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 350px) {
+  .attendance_list_header {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: column;
+  }
+
+  .attendance_list_header_paragraph {
+    font-size: 26px;
+    margin-right: 0px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .attendance_list_input {
+    width: 210px;
+    padding: 14px 10px;
+    height: 26px;
+    font-weight: 500;
+    font-size: 14px;
+  }
+
+  .attendance_list_ul {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin-top: 30px;
+  }
+
+  .attendance_list_item {
+    width: 90%;
+    border-radius: 8px;
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    overflow: hidden;
+  }
+
+  .attendance_list_card_paragraph {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .attendance_list_card_top {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .attendance_list_card_span {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+
+  .attendance_list_card_top_item {
+    display: flex;
+  }
+
+  .attendance_list_card_top_item+.attendance_list_card_top_item {
+    margin-top: 7px;
+  }
+
+  .attendance_list_card_top_p {
+    margin-right: 10px;
+  }
+
+  .attendance_list_card_bottom_item {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .attendance_list_card_bottom_p {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .attendance_list_card_bottom_text {
+    font-size: 14px;
+  }
 }
