--- a/src/pages/Attendance/attendance.css
+++ b/src/pages/Attendance/attendance.css
@@ -15,3 +15,19 @@
   padding-left: 20px;
   display: flex;
 }
+
+@media (max-width: 1000px) {
+.atenndance_inner {
+  display: flex;
+}
+
+.atenndance_right_box {
+  width: 100vw;
+  padding-left: 0px;
+  padding-top: 0px;
+}
+.atenndance_right_box_inner {
+  padding-left: 0px;
+  display: flex;
+}
+}
