--- a/src/components/StudentsList/studentsListt.css
+++ b/src/components/StudentsList/studentsListt.css
@@ -2,6 +2,10 @@
   margin-bottom: 70px;
 }
 
+/* tbody tr td {
+  background: #00ff62;
+} */
+
 .student_list_box {
   box-shadow: 0px 10px 25px 0px #00000040;
   background-color: #fff;
