--- a/src/components/GroupList/group.css
+++ b/src/components/GroupList/group.css
@@ -55,7 +55,13 @@
   align-items: center;
 }
 
-/* .grup_list_card_img {} */
+.grup_list_card_img {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
 
 .grup_list_card_span {
   padding-right: 20px;
